--- a/information.html
+++ b/information.html
@@ -102,8 +102,8 @@
 
   <!-- First Container -->
   <div class="container-fluid bg-1 text-center">
-    <img src="img/logomain.png" class="img-responsive margin" style="display:inline" alt="Bird" width="250"
-      height="100">
+    <img src="C:\Users\hp\Evotech-1\evotechlogo.png" class="img-responsive margin" style="display:inline" alt="Bird"
+      width="250" height="100">
     <h3 style="font-size: 1em; letter-spacing: 1.4px;">BHARATI VIDYAPEETH COLLEGE OF ENGINEERING,NEW DELHI</h3>
   </div>
 
@@ -132,14 +132,14 @@
       http://evotech.tech
     </p>
     <p style="color:black;">
-      Registrations are open till <b>29th October. </b>
+      Registrations are open till <b>4th October. </b>
 
       For updates, like and follow our facebook page - https://www.facebook.com/events/1969732713108231/
     </p>
   </div>
   <div>
     <div class="evo1">
-      <h2><b>GlIMPSE OF EVOTECH 2.0</b></h2>
+      <h2><b>GlIMPSE OF EVOTECH 1.0</b></h2>
       <br>
     </div>
 
@@ -178,6 +178,71 @@
             </div>
             <div class="item">
               <img src="Images/7.jpeg" style="width:100%;">
+            </div>
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    </header>
+
+    </section>
+    <br> <br> <br>
+
+
+
+  </div>
+
+  <div>
+    <div class="evo1">
+      <h2><b>GlIMPSE OF EVOTECH 2.0</b></h2>
+      <br>
+    </div>
+
+    <div class="container">
+      <div class="container caro" style="padding-left: 25% ">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:70%; height: 50%">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+            <li data-target="#myCarousel" data-slide-to="5"></li>
+            <li data-target="#myCarousel" data-slide-to="6"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="C:\Users\hp\Evotech-1\IMG_20181031_113839.jpg" style="width:100%;">
+            </div>
+
+            <div class="item">
+              <img src="C:\Users\hp\Evotech-1\IMG_20181031_120856.jpg" style="width:100%;">
+            </div>
+
+            <div class="item">
+              <img src="C:\Users\hp\Evotech-1\IMG_20181031_132614.jpg" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="C:\Users\hp\Evotech-1\IMG_20181031_133009.jpg" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="C:\Users\hp\Evotech-1\IMG_20181031_134950.jpg" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="C:\Users\hp\Evotech-1\IMG-20181031-WA0049.jpg" style="width:100%;">
             </div>
           </div>
 
