--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 	<!-- BEGIN OF site cover -->
 	<div class="page-cover" id="s-cover">
 		<!-- Cover Background -->
-		<div class="cover-bg pos-abs full-size bg-img" data-image-src="C:/Users/hp/Evotech-1/image1.jpeg"></div>
+		<div class="cover-bg pos-abs full-size bg-img" data-image-src="image1.jpeg"></div>
 
 		<!-- Solid color as filter -->
 		<div class="cover-bg-mask pos-abs full-size bg-color" data-bgcolor="rgba(0, 0, 0, 0.60)"></div>
@@ -219,7 +219,7 @@
 				<!-- Logo instead -->
 				<div class="elem-center logo">
 					<a href="#">
-						<img src="C:\Users\hp\Evotech-1\evotechlogo.png">
+						<img src="evotechlogo.png">
 					</a>
 				</div>
 				<div class="elem-bottom">
@@ -474,12 +474,11 @@
 					<div style="padding-top: 5%;">
 						<div class="row">
 							<div class="col-xs-4 col-lg-6">
-								<img src="C:\Users\hp\Evotech-1\WhatsApp Image 2019-09-16 at 5.15.13 PM (1).jpeg"
-									height="150px;" width="200px;">
+								<img src="WhatsApp Image 2019-09-16 at 5.15.13 PM (1).jpeg" height="150px;"
+									width="200px;">
 							</div>
 							<div class="col-xs-6">
-								<img src="C:\Users\hp\Evotech-1\WhatsApp Image 2019-09-16 at 5.15.13 PM.jpeg"
-									height="150px;" width="150px;">
+								<img src="WhatsApp Image 2019-09-16 at 5.15.13 PM.jpeg" height="150px;" width="150px;">
 							</div>
 
 						</div>
