--- a/information.html
+++ b/information.html
@@ -102,8 +102,7 @@
 
   <!-- First Container -->
   <div class="container-fluid bg-1 text-center">
-    <img src="C:\Users\hp\Evotech-1\evotechlogo.png" class="img-responsive margin" style="display:inline" alt="Bird"
-      width="250" height="100">
+    <img src="evotechlogo.png" class="img-responsive margin" style="display:inline" alt="Bird" width="250" height="100">
     <h3 style="font-size: 1em; letter-spacing: 1.4px;">BHARATI VIDYAPEETH COLLEGE OF ENGINEERING,NEW DELHI</h3>
   </div>
 
@@ -225,24 +224,24 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item active">
-              <img src="C:\Users\hp\Evotech-1\IMG_20181031_113839.jpg" style="width:100%;">
+              <img src="IMG_20181031_113839.jpg" style="width:100%;">
             </div>
 
             <div class="item">
-              <img src="C:\Users\hp\Evotech-1\IMG_20181031_120856.jpg" style="width:100%;">
+              <img src="IMG_20181031_120856.jpg" style="width:100%;">
             </div>
 
             <div class="item">
-              <img src="C:\Users\hp\Evotech-1\IMG_20181031_132614.jpg" style="width:100%;">
+              <img src="IMG_20181031_132614.jpg" style="width:100%;">
             </div>
             <div class="item">
-              <img src="C:\Users\hp\Evotech-1\IMG_20181031_133009.jpg" style="width:100%;">
+              <img src="IMG_20181031_133009.jpg" style="width:100%;">
             </div>
             <div class="item">
-              <img src="C:\Users\hp\Evotech-1\IMG_20181031_134950.jpg" style="width:100%;">
+              <img src="IMG_20181031_134950.jpg" style="width:100%;">
             </div>
             <div class="item">
-              <img src="C:\Users\hp\Evotech-1\IMG-20181031-WA0049.jpg" style="width:100%;">
+              <img src="IMG-20181031-WA0049.jpg" style="width:100%;">
             </div>
           </div>
 
