--- a/information.html
+++ b/information.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>evotech 2.0</title>
+  <title>evotech 3.0</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -209,16 +209,16 @@
 
     <div class="container">
       <div class="container caro" style="padding-left: 25% ">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:70%; height: 50%">
+        <div id="myCarousel2" class="carousel slide" data-ride="carousel" style="width:70%; height: 50%">
           <!-- Indicators -->
           <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-            <li data-target="#myCarousel" data-slide-to="4"></li>
-            <li data-target="#myCarousel" data-slide-to="5"></li>
-            <li data-target="#myCarousel" data-slide-to="6"></li>
+            <li data-target="#myCarouse2" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarouse2" data-slide-to="1"></li>
+            <li data-target="#myCarouse2" data-slide-to="2"></li>
+            <li data-target="#myCarouse2" data-slide-to="3"></li>
+            <li data-target="#myCarouse2" data-slide-to="4"></li>
+            <li data-target="#myCarouse2" data-slide-to="5"></li>
+            <li data-target="#myCarouse2" data-slide-to="6"></li>
           </ol>
 
           <!-- Wrapper for slides -->
@@ -246,11 +246,11 @@
           </div>
 
           <!-- Left and right controls -->
-          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <a class="left carousel-control" href="#myCarousel2" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <a class="right carousel-control" href="#myCarousel2" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
             <span class="sr-only">Next</span>
           </a>
