--- a/index.html
+++ b/index.html
@@ -480,6 +480,9 @@
 							<div class="col-xs-6">
 								<img src="WhatsApp Image 2019-09-16 at 5.15.13 PM.jpeg" height="150px;" width="150px;">
 							</div>
+							<div class="col-xs-6">
+								<img src="WhatsApp Image 2019-09-19 at 12.21.08 PM.jpeg" height="150px;" width="150px;">
+							</div>
 
 						</div>
 
@@ -529,7 +532,7 @@
 						<h3>Contact</h3>
 						<ul class="buttons">
 							<li>
-								<a href="https://www.facebook.com/events/1969732713108231/"><i class="fab fa-facebook-f"
+								<a href="https://www.facebook.com/events/672439309909783/"><i class="fab fa-facebook-f"
 										style="font-size: 2.3em;"></i></a>
 							</li>
 							<li class="show-for-medium-up">
