--- a/information.html
+++ b/information.html
@@ -138,7 +138,7 @@
   </div>
   <div>
     <div class="evo1">
-      <h2><b>GlIMPSE OF EVOTECH 1.0</b></h2>
+      <h2><b>GLIMPSE OF EVOTECH 1.0</b></h2>
       <br>
     </div>
 
@@ -203,7 +203,7 @@
 
   <div>
     <div class="evo1">
-      <h2><b>GlIMPSE OF EVOTECH 2.0</b></h2>
+      <h2><b>GLIMPSE OF EVOTECH 2.0</b></h2>
       <br>
     </div>
 
